# python-template

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.build  Dockerfile.dev  Dockerfile.python  Makefile  README.md  entrypoint-build.sh  entrypoint.sh  pyproject.toml  run.bat
src/pycli/: cli.py
src/pycli/resources/: operations.xml
src/pycli/utils/: math.py
tests/: test_math.py
