[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pycli"
version = "0.1.0"
dependencies = [
    "lxml"
]

[project.scripts]
pycli = "pycli.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pyinstaller",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pycli"]
package-data = { "pycli" = ["py.typed", "resources/*"] }

[tool.mypy]
files = ["src"]
